--- a/works.html
+++ b/works.html
@@ -122,9 +122,7 @@
                 Comenzamos con una compilación que llamaremos "Majestad del cielo". Todas las melodías son arregladas y
                 en algunos casos
                 compuestas por Tom Fettke. Se trata de una compilación de 13
-                melodías que actualmente
-                se han trabajado y presentado por el Coro de la Asociación Azteca. Esperamos que sus miembros sean de
-                los primeros en participar.
+                melodías que hacen referencia a Dios como Creador y Redentor.
               </p>
             </div>
           </div>
